buttons no longer jump when going through videos

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -296,7 +296,7 @@ body {
 
 
 #video{
-  max-height: 90vh;
+  max-height: 65vh;
   // width: 90vw;
   max-width: 60vw;
 }
